# in_msx

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: in_msx.c  in_msx.h  in_msx.ini  msxplug.c  msxplug.h
src/config/: config.c  config.h  cpage1.c  cpage2.c  cpage3.c  cpage4.c  cpage5.c  cpage6.c  cpage7.c  cpage8.c  cpagea.c  dialog.c  update.c
src/controls/: control.h  mixer.c  panpot.c  switch.c
src/edit2413/: edit2413.c  edit2413.h
src/kssdlg/: kssdlg.c  kssdlg.h
src/maskdlg/: maskdlg.c  maskdlg.h
src/optdlg/: optdlg.c  optdlg.h
src/pandlg/: pandlg.c  pandlg.h
src/pls/: ppls.c  ppls.h  sstream.c  sstream.h
src/plsdlg/: plsdlg.c  plsdlg.h
src/rc/: in_msx.manifest  resource.h  resource.rc
